--- a/src/app/component/auth/login/login.component.html
+++ b/src/app/component/auth/login/login.component.html
@@ -1,72 +1,40 @@
-<!--<section>-->
+<main>
+  <section class="login-container">
+    <h1>Login to Account</h1><br>
 
-  <!--&lt;!&ndash;<div class="modal-header">&ndash;&gt;-->
-    <!--&lt;!&ndash;<h4 class="modal-title">Modal title</h4>&ndash;&gt;-->
-    <!--&lt;!&ndash;<button type="button" class="close" aria-label="Close" (click)="d('Cross click')">&ndash;&gt;-->
-      <!--&lt;!&ndash;<span aria-hidden="true">&times;</span>&ndash;&gt;-->
-    <!--&lt;!&ndash;</button>&ndash;&gt;-->
-  <!--&lt;!&ndash;</div>&ndash;&gt;-->
-  <!--&lt;!&ndash;<div class="modal-body">&ndash;&gt;-->
-    <!--&lt;!&ndash;<p>One fine body&hellip;</p>&ndash;&gt;-->
-  <!--&lt;!&ndash;</div>&ndash;&gt;-->
-  <!--&lt;!&ndash;<div class="modal-footer">&ndash;&gt;-->
-    <!--&lt;!&ndash;<button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>&ndash;&gt;-->
-  <!--&lt;!&ndash;</div>&ndash;&gt;-->
-  <!---->
-  <!--<div class="login-btn">-->
-    <!--<a href="#" class="button" data-toggle="modal" data-target="#login-modal">Login</a>-->
-  <!--</div>-->
+    <i class="fa fa-facebook"></i><button mat-raised-button type="submit" color="primary" (click)="loginWithFacebook()">Continue with Facebook</button>
+    <i class="fa fa-google"></i><button mat-raised-button type="submit" color="warn" (click)="loginWithGoogle()">Continue with Google</button>
 
-  <!--<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">-->
-    <!--<div class="modal-dialog">-->
-      <!--<div class="loginmodal-container">-->
-        <!--<h1>Login to Your Account</h1><br>-->
-        <!--<form>-->
-          <!--<input type="text" name="user" placeholder="Username">-->
-          <!--<input type="password" name="pass" placeholder="Password">-->
-          <!--<input type="submit" name="login" class="login loginmodal-submit" value="Login">-->
-        <!--</form>-->
+    <p class="text-or">OR</p>
 
-        <!--<div class="login-help">-->
-          <!--<a href="#">Register</a> - <a href="#">Forgot Password</a>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</section>-->
+    <form [formGroup]="loginForm" (submit)="login()" novalidate>
 
+      <mat-form-field>
+        <!--<input type="email" name="user" placeholder="E-mail" formControlName="email" required>-->
+        <input matInput placeholder="Enter your email" formControlName="email" required>
+        <mat-error *ngIf="email.valid">Not a valid email</mat-error>
+      </mat-form-field>
 
+      <mat-form-field>
+        <input matInput name="pass" placeholder="Enter your password" [type]="hide ? 'password' : 'text'" formControlName="password">
+        <mat-icon matSuffix (click)="hide = !hide"> {{ hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+        <mat-error *ngIf="password.valid">Not a valid password</mat-error>
+      </mat-form-field>
 
-<section class="login-container">
-  <h1>Login to Account</h1><br>
+      <button mat-raised-button type="submit" color="primary">Login</button>
 
-  <ul>
-    <li><i class="fa fa-facebook"></i><a (click)="loginWithFacebook()" class="button-social button-facebook">Continue with Facebook</a></li>
-    <li><i class="fa fa-google"></i><a (click)="loginWithGoogle()" class="button-social button-google">Continue with Google</a></li>
-  </ul>
+    </form>
 
-  <p class="text-or">OR</p>
+    <div class="login-help">
+      <a href="/register">Register</a> - <a href="/reset-password">Forgot Password</a>
+    </div>
+  </section>
+</main>
 
-  <form autocomplete="off" novalidate [formGroup]="form" (submit)="login()">
-    <input type="email" name="user" placeholder="E-mail" formControlName="email">
-    <input type="password" name="pass" placeholder="Password" formControlName="password">
-    <input type="submit" name="login" class="login login-modal-submit" value="Login">
-  </form>
+<!--<a href="https://www.facebook.com/v3.0/dialog/oauth?-->
+  <!--client_id=615550948797320&-->
+  <!--response_type=token&scope=user_location,publish_actions&-->
+  <!--redirect_uri=http://localhost:4200/facebook/auth" class="button">Sign In with Facebook SDK</a>-->
 
-  <div class="login-help">
-    <a href="/register">Register</a> - <a href="/reset-password">Forgot Password</a>
-  </div>
-  <!--<div class="login-help">-->
-    <!--<button (click)="loginWithGoogle()">Login with Google</button>-->
-  <!--</div>-->
-</section>
-
-
-
-<a href="https://www.facebook.com/v3.0/dialog/oauth?
-  client_id=615550948797320&
-  response_type=token&scope=user_location,publish_actions&
-  redirect_uri=http://localhost:4200/facebook/auth" class="button">Sign In with Facebook SDK</a>
-
-<br>
-{{ user$ | async | json }}
+<!--<br>-->
+<!--{{ user$ | async | json }}-->
