--- a/src/app/component/auth/login/login.component.html
+++ b/src/app/component/auth/login/login.component.html
@@ -9,25 +9,29 @@
 
     <form [formGroup]="loginForm" (submit)="login()" novalidate>
 
-      <mat-form-field>
+      <mat-form-field [formGroup]="loginForm">
         <!--<input type="email" name="user" placeholder="E-mail" formControlName="email" required>-->
         <input matInput placeholder="Enter your email" formControlName="email" required>
         <mat-error *ngIf="email.valid">Not a valid email</mat-error>
       </mat-form-field>
 
-      <mat-form-field>
+      <mat-form-field [formGroup]="loginForm">
         <input matInput name="pass" placeholder="Enter your password" [type]="hide ? 'password' : 'text'" formControlName="password">
         <mat-icon matSuffix (click)="hide = !hide"> {{ hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+        <mat-hint align="end">
+          <a [routerLink]="['/register']">Register</a> - <a [routerLink]="['/reset-password']">Forgot Password</a>
+        </mat-hint>
         <mat-error *ngIf="password.valid">Not a valid password</mat-error>
+
       </mat-form-field>
 
       <button mat-raised-button type="submit" color="primary">Login</button>
 
     </form>
 
-    <div class="login-help">
-      <a href="/register">Register</a> - <a href="/reset-password">Forgot Password</a>
-    </div>
+    <!--<div class="login-help">-->
+      <!--<a href="/register">Register</a> - <a href="/reset-password">Forgot Password</a>-->
+    <!--</div>-->
   </section>
 </main>
 
