--- a/src/app/component/auth/login/login.component.scss
+++ b/src/app/component/auth/login/login.component.scss
@@ -49,6 +49,7 @@ section {
 button {
   width: 100%;
   margin-bottom: 10px;
+  margin-top: 15px;
 }
 .fa {
   position: absolute;
@@ -57,15 +58,18 @@ button {
   cursor: pointer;
 }
 .fa-facebook {
-  top: 200px;
+  top: 215px;
   font-size: 28px;
   left: 502px;
 }
 .fa-google {
-  top: 245px;
+  top: 275px;
   left: 500px;
   font-size: 28px;
 }
 .text-or {
   text-align: center;
+}
+a {
+  text-decoration: none;
 }
