--- a/src/app/component/auth/reset-password/reset-password.component.html
+++ b/src/app/component/auth/reset-password/reset-password.component.html
@@ -1,3 +1,12 @@
-<p>
-  reset-password works!
-</p>
+<main>
+  <section class="login-container">
+    <h2>Forgot your password?</h2>
+    <p>We can send you a reset link</p>
+    <mat-form-field>
+      <input matInput placeholder="Enter you email" [(ngModel)]="email" required>
+    </mat-form-field>
+    <button mat-raised-button (click)="resetPassword()" color="accent">Reset password</button>
+  </section>
+</main>
+
+
