--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -27,7 +27,7 @@
               </form>
             </li>
             <li class="nav-item">
-              <a class="nav-link first" data-toggle="modal" data-target="#login-modal" [routerLink]="['/login']" *ngIf="!isLoggedIn">Sign In</a>
+              <a class="nav-link first" [routerLink]="['/login']" *ngIf="!isLoggedIn">Sign In</a>
             </li>
             <li class="nav-item">
               <a class="nav-link first" (click)="logout()" [routerLink]="['/']" *ngIf="isLoggedIn">Logout</a>
@@ -36,7 +36,7 @@
               <a class="nav-link" [routerLink]="['/register']" *ngIf="!isLoggedIn">Create account</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">En</a>
+              <a [routerLink]="['/']" class="nav-link">En</a>
             </li>
           </ul>
         </div>
