works with users components

--- a/src/app/component/navbar/navbar.component.scss
+++ b/src/app/component/navbar/navbar.component.scss
@@ -31,45 +31,21 @@
   box-shadow: 0 4px 8px 0 rgba(232,79,60,0.62);
 }
 
+.avatar {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+li {
+  list-style: none;
+  display: inline-block;
+  color: #FFFFFF
+}
 
 /*=======END navigation=======*/
 
 
-//#search {
-//  margin: 4px;
-//}
-//
-//#search_text {
-//  width: 297px;
-//  padding: 15px 0 15px 20px;
-//  font-size: 16px;
-//  font-family: Montserrat, sans-serif;
-//  border: 0 none;
-//  height: 52px;
-//  margin-right: 0px;
-//  color: white;
-//  outline: none;
-//  background: #1f7f5c;
-//  float: left;
-//  box-sizing: border-box;
-//  transition: all 0.15s;
-//}
-//
-//#search_text:focus{
-//  background: rgb(64, 151, 119);
-//}
-//
-//#search_button{
-//  border: 0 none;
-//  background: #1f7f5c url(https://designmodo.com/demo/dropdown-menu-search/search.png) center no-repeat;
-//  width: 60px;
-//  float: left;
-//  padding: 0;
-//  text-align: center;
-//  height: 52px;
-//  cursor: pointer;
-//}
-//
 .fixedbut {
   position: fixed;
   bottom: 20px;
