--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -26,6 +26,29 @@
                 <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
               </form>
             </li>
+
+            <!--<li class="nav-item dropdown" *ngIf="user">-->
+                <!--<div *ngIf="isLoggedIn" class="nav-link dropdown-toggle" id="userprofile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">-->
+                  <!--<ul>-->
+                    <!--<li><img class="avatar" [src]="user.photoURL" alt="{{user.displayName}}"></li>-->
+                    <!--<li><p>{{user.displayName}}</p></li>-->
+                  <!--</ul>-->
+                <!--</div>-->
+              <!--<div class="dropdown-menu" aria-labelledby="userprofile">-->
+                <!--<a class="dropdown-item" href="#">Profile</a>-->
+                <!--<a class="dropdown-item" href="#">Help</a>-->
+                <!--<a class="dropdown-item" (click)="logout()" [routerLink]="['/']" *ngIf="isLoggedIn">Sign Out</a>-->
+              <!--</div>-->
+            <!--</li>-->
+
+            <li class="nav-item" >
+              <div *ngIf="isLoggedIn" routerLink="/me">
+                <ul>
+                  <li><img class="avatar" [src]="user.photoURL" alt="{{user.displayName}}"></li>
+                  <li><p>{{user.displayName}}</p></li>
+                </ul>
+              </div>
+            </li>
             <li class="nav-item">
               <a class="nav-link first" [routerLink]="['/login']" *ngIf="!isLoggedIn">Sign In</a>
             </li>
@@ -47,50 +70,3 @@
 <!--=======END navigation=======-->
 
 <a class="fixedbut" [routerLink]="['/chat']" *ngIf="isLoggedIn">Chat!</a>
-
-<!--<section>-->
-  <!--<div class="container">-->
-    <!--<nav class="navbar navbar-expand-md navbar-dark bg-dark">-->
-      <!--<a class="navbar-brand" [routerLink]="['/']">BitRATE</a>-->
-      <!--<button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"-->
-          <!--aria-expanded="false" aria-label="Toggle navigation">-->
-        <!--<span class="navbar-toggler-icon"></span>-->
-      <!--</button>-->
-      <!--<div class="collapse navbar-collapse" id="collapsibleNavId">-->
-        <!--<ul class="navbar-nav mr-auto mt-2 mt-lg-0">-->
-          <!--<li class="nav-item active">-->
-            <!--<a class="nav-link" [routerLink]="['/']" routerLinkActive="active">Home</a>-->
-          <!--</li>-->
-          <!--<li class="nav-item">-->
-            <!--<a class="nav-link" [routerLink]="['/collection']">Collection</a>-->
-          <!--</li>-->
-          <!--<li class="nav-item">-->
-            <!--<a class="nav-link" [routerLink]="['/upload']">Upload</a>-->
-          <!--</li>-->
-          <!--<li id="search">-->
-            <!--<form class="form-inline my-2 my-lg-0" action="" method="get">-->
-              <!--<input class="form-control mr-sm-2" type="text" name="search_text" id="search_text" placeholder="Search" />-->
-              <!--<input class="btn btn-outline-success my-2 my-sm-0" type="button" name="search_button" id="search_button" />-->
-            <!--</form>-->
-          <!--</li>-->
-          <!--<li class="nav-item">-->
-            <!--<a class="nav-link" [routerLink]="['/login']" *ngIf="!isLoggedIn">SignIn</a>-->
-          <!--</li>-->
-          <!--<li class="nav-item">-->
-            <!--<a class="nav-link" (click)="logout()" [routerLink]="['/']" *ngIf="isLoggedIn">Logout</a>-->
-          <!--</li>-->
-          <!--<li class="nav-item">-->
-            <!--<a class="nav-link" [routerLink]="['/signup']" *ngIf="!isLoggedIn">Create account</a>-->
-          <!--</li>-->
-        <!--</ul>-->
-        <!--&lt;!&ndash; <form class="form-inline my-2 my-lg-0">-->
-          <!--<input class="form-control mr-sm-2" type="text" placeholder="Search">-->
-          <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-        <!--</form> &ndash;&gt;-->
-      <!--</div>-->
-    <!--</nav>-->
-  <!--</div> -->
-<!--</section>-->
-
-
-
