--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -44,7 +44,7 @@
             <li class="nav-item" >
               <div *ngIf="isLoggedIn" routerLink="/me">
                 <ul>
-                  <li><img class="avatar" [src]="user.photoURL" alt="{{user.displayName}}"></li>
+                  <li><img class="avatar" [src]="user.photoURL || '//:0'" alt="{{user.displayName}}"></li>
                   <li><p>{{user.displayName}}</p></li>
                 </ul>
               </div>
