works with home component

--- a/src/app/component/chat/chat.component.html
+++ b/src/app/component/chat/chat.component.html
@@ -5,11 +5,8 @@
     <hr>
     <div class="app-message" id="app-message">
 
-      <div *ngFor="let chat of chatService.chats"
-           [ngClass]="{ 'text-right': chatService._user.uid == chats.uid }">
-        <span class="badge"
-              [ngClass]="{ 'badge-primary': chatService._user.uid == chats.uid,
-                           'badge-success': chatService._user.uid != chats.uid }">User Name</span>
+      <div *ngFor="let chat of chatService.chats" class="text-right">
+        <span class="badge badge-primary">{{ chat.userName}}</span>
         <p>{{ chat.message }}</p>
       </div>
 
