--- a/src/app/component/chat/chat.component.scss
+++ b/src/app/component/chat/chat.component.scss
@@ -7,7 +7,6 @@
   cursor: pointer;
 }
 
-
 .chat-window{
   padding: 10px;
   width: 300px;
@@ -15,6 +14,7 @@
   overflow: hidden;
   border: 1px solid #4080FF;
   border-radius: 20px;
+  background-color: #FFFFFF;
 }
 
 .app-message{
