--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -22,7 +22,8 @@
             </li>
             <li>
               <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+                       [(ngModel)]="search.track" (keyup.enter)="search.searchTrack()" >
                 <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
               </form>
             </li>
