--- a/src/app/component/upload/upload.component.html
+++ b/src/app/component/upload/upload.component.html
@@ -1,3 +1,16 @@
+<div class="container">
 <p>
   upload works!
 </p>
+
+  <!--<input-->
+    <!--(keyup)="searchTerm$.next($event.target.value)">-->
+
+  <!--<ul *ngIf="results">-->
+    <!--<li *ngFor="let result of results">-->
+      <!--<a href="{{ result.latest }}" target="_blank">-->
+        <!--{{ result.name }}-->
+      <!--</a>-->
+    <!--</li>-->
+  <!--</ul>-->
+</div>
