work with chat component

--- a/src/app/component/chat/chat.component.html
+++ b/src/app/component/chat/chat.component.html
@@ -22,7 +22,7 @@
 
     </div>
 
-    <input type="text" name="message" class="form-control" [(ngModel)]="message" (keyup.enter)="sendMessage()" placeholder="Enter message">
+    <input type="text" name="message" class="form-control" [(ngModel)]="message" (keyup.enter)="sendMessage(message)" placeholder="Enter message">
 
   </div>
 </div>
