--- a/src/app/component/player/player.component.html
+++ b/src/app/component/player/player.component.html
@@ -1,3 +1,38 @@
-<p>
-  player
-</p>
+<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <i class="fa fa-backward nav-link fa-vc"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-play nav-link"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-pause nav-link fa-vc"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-forward nav-link fa-vc"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-heart-o nav-link fa-vc"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-plus nav-link fa-vc"></i>
+      </li>
+      <div class="info-music">
+        <p>Autor</p>
+        <p>Description</p>
+      </div>
+      <li class="nav-item">
+        <i class="fa fa-volume-up nav-link fa-vc"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-volume-down nav-link fa-vc"></i>
+      </li>
+      <li class="nav-item">
+        <i class="fa fa-volume-off nav-link fa-vc"></i>
+      </li>
+    </ul>
+  </div>
+</nav>
