--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <!--<div class="col-md-12">-->
       <app-navbar></app-navbar>
       <router-outlet></router-outlet>
+      <app-player *ngIf="isLoggedIn"></app-player>
     <!--</div>-->
   <!--</div>-->
 <!--</div>-->
