--- a/src/app/component/auth/reset-password/reset-password.component.html
+++ b/src/app/component/auth/reset-password/reset-password.component.html
@@ -5,7 +5,7 @@
     <mat-form-field>
       <input matInput placeholder="Enter you email" [(ngModel)]="email" required>
     </mat-form-field>
-    <button mat-raised-button (click)="resetPassword()" color="accent">Reset password</button>
+    <button mat-raised-button (click)="resetPassword(email)" color="accent">Reset password</button>
   </section>
 </main>
 
