--- a/src/app/component/navbar/navbar.component.scss
+++ b/src/app/component/navbar/navbar.component.scss
@@ -48,15 +48,21 @@ li {
 
 .fixedbut {
   position: fixed;
-  bottom: 20px;
+  bottom: 90px;
   right: 20px;
   display: block;
-  background: #2db700;
+  //background: #2db700;
   color: #fff;
   text-decoration: none;
-  padding: 6px 23px;
-  font-size: 17px;
+  padding: 5px 15px;
+  font-size: 36px;
   z-index: 999;
+  //border-radius: 50%;
+  //width: 50px;
+  //height: 50px;
+}
+.fixedbut:hover {
+  background: #2db700;
 }
 
 .fixedbut:hover {
